--- a/3kursas/dbox/Makefile
+++ b/3kursas/dbox/Makefile
@@ -17,17 +17,22 @@ TESTS=${INPUTS:${INPUT_DIR}/%.pdb=${TEST_DIR}/%.tst}
 OUTPUTS=${INPUTS:${INPUT_DIR}/%.pdb=${OUTPUT_DIR}/%.out}
 DIFS=${TESTS:${TEST_DIR}/%.tst=${OUTPUT_DIR}/%.diff}
 
-all: ${TESTS} ${DIFS}
+all: ${TESTS} ${OUTPUTS} ${DIFS}
 
 ${OUTPUT_DIR}/%.diff: ${TEST_DIR}/%.tst ${OUTPUT_DIR}/%.out
-	diff $^ > $@
+	diff -I '#.*' $^ > $@ 2>&1
 
 ${TEST_DIR}/%.tst: ${INPUT_DIR}/%.pdb
-	./dbox $^ > $@
-	
+	[ -f $@ ] || ./tools/dbox $< > $@ 2>&1
+# 2>&1
+	[ -f $@ ] && touch $@
+
 ${OUTPUT_DIR}/%.out: ${INPUT_DIR}/%.pdb
-	./pdbboxes $^ > $@
+	./pdbboxes $^ > $@ 2>&1
+# 2>&1
+
 clean:
-	rm -rf ./tests/*
-distclean:
+	rm -rf ./outputs/*.diff
+
+distclean: clean
 	rm -rf ./outputs/*
